--- a/views/index.erb
+++ b/views/index.erb
@@ -2,13 +2,43 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Sample</title>
+  <title>簡易画像掲示板</title>
   <link href="/css/main.css" media="screen" rel="stylesheet" type="text/css">
 </head>
 <body>
   <div class="container">
-    <h1>Sample</h1>
+    <h1>簡易画像掲示板</h1>
+
+    <div class="submit">
+      <form method="post" id="ex-form" action="/" enctype="multipart/form-data">
+        <div class="form-text">
+          <textarea name="ex_text" id="ex-text"></textarea>
+        </div>
+        <div class="form-file">
+          <input type="file" name="file" value="file">
+        </div>
+        <div class="form-submit">
+          <input type="submit" name="submit" value="投稿する">
+        </div>
+      </form>
+    </div>
+
+    <% posts.each do |post| %>
+    <div class="post">
+      <div class="post-text">
+        <%= escape_html post["text"] %>
+      </div>
+      <div class="post-image">
+        <img src="/uploads/<%= post["img_file_name"] %>" alt="<%= post["img_file_name"] %>" class="ex-image">
+      </div>
+      <div class="tools">
+        <span class="add-star" data-post-id="<%= post["id"] %>"><%= post["star_count"] %></span>
+      </div>
+    </div>
+    <% end %>
+
   </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <script src="/js/main.js"></script>
 </body>
 </html>
